bug squashing

--- a/css/nav.css
+++ b/css/nav.css
@@ -45,7 +45,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: grey;
+    background-color: lightpink;
 }
 
 li.dropdown {
